# CourseWork_Dithering

./: CMakeLists.txt  README.md  dithering.cpp
